fixed unaligned icon of trust

--- a/newrai/app/static/css/app.css
+++ b/newrai/app/static/css/app.css
@@ -1068,6 +1068,10 @@ section {
 	justify-content: center;
 }
 
+.margin-slide {
+	margin-bottom: 30px;
+}
+
 .swiper-button-prev,
 .swiper-button-next {
 	color: white;
